# bitvault

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  render.yaml
.github/: dependabot.yml
.github/workflows/: docker-image.yml  docker-publish.yml  rust.yml
src/: args.rs  main.rs  pasta.rs
src/endpoints/: admin.rs  auth_admin.rs  auth_upload.rs  create.rs  edit.rs  errors.rs  file.rs  guide.rs  list.rs  pasta.rs  qr.rs  remove.rs  static_resources.rs
src/util/: animalnumbers.rs  auth.rs  bip39words.rs  db.rs  db_json.rs  db_sqlite.rs  hashids.rs  misc.rs  syntaxhighlighter.rs  version.rs
templates/: admin.html  auth_admin.html  auth_upload.html  edit.html  error.html  footer.html  guide.html  header.html  index.html  list.html  qr.html  upload.html
templates/assets/: aes.js  water.css
