[package]
name = "bitvault"
version = "1.1.1"
edition = "2021"
authors = ["Mario Stöckl <mario.stoeckl@posteo.de>, originally Daniel Szabo <daniel@microbin.eu> and contributors"]
license = "GPL-3"
description = "Simple, performant and puristic, entirely self-contained Pastebin and URL shortener."
readme = "README.md"
repository = "https://github.com/overcuriousity/bitvault"
keywords = ["pastebin", "filesharing", "bitvault", "actix", "selfhosted"]
categories = ["pastebins"]


[dependencies]
actix-web = "4"
actix-files = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.80"
bytesize = { version = "1.1", features = ["serde"] }
askama = "0.11"
askama-filters = { version = "0.1.3", features = ["chrono"] }
chrono = "0.4.19"
rand = "0.8.5"
linkify = "0.8.1"
clap = { version = "4.5.7", features = ["derive", "env"] }
actix-multipart = "0.4.0"
futures = "0.3"
sanitize-filename = "0.3.0"
log = "0.4"
env_logger = "0.9.0"
actix-web-httpauth = "0.6.0"
lazy_static = "1.4.0"
syntect = "5.0"
qrcode-generator = "4.1.6"
rust-embed = "6.4.2"
mime_guess = "2.0.4"
harsh = "0.2"
html-escape = "0.2.13"
magic-crypt = "3.1.12"
rusqlite = { version = "0.29.0", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }

[dependencies.openssl]
version = "0.10.51"
features = ["vendored"]

[profile.release]
lto = true
strip = true